# axle

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  Makefile  README.md  pyproject.toml  xstartup
axle/: __main__.py  cli.py
axle/ai/: engine.py  prompts.py
axle/ai/providers/: base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
axle/config/: settings.py
axle/core/: models.py  planner.py  runner.py  scanner.py
axle/plugins/: base.py  database.py  firewall.py  nginx.py  registry.py  runtime.py  ssl.py  systemd.py
axle/secrets/: vault.py
docs/: AXLE_Whitepaper.docx  AXLE_Whitepaper.md  CHANGELOG.md  DEVLOG.md  TASKS.md  aimplementation_plan.md  architecture.md  blueprint.md  building-the-image.md  competitive_analysis.md  getting-started.md
templates/database/: mysql_init.sql.j2  postgres_init.sql.j2
templates/nginx/: fullstack.conf.j2  reverse_proxy.conf.j2  static_site.conf.j2
templates/systemd/: app.service.j2
tests/: conftest.py  test_ai.py  test_api_endpoints.py  test_build.py  test_cli.py  test_e2e_deployments.py  test_models.py  test_planner.py  test_plugins.py  test_runner.py  test_scanner.py  test_settings.py  test_vault.py
web/api/: app.py  auth.py  websocket.py
web/api/routes/: __init__.py  chatbot.py  deploy.py  monitor.py  projects.py  secrets.py
web/dashboard/: index.html  package-lock.json  package.json
web/dashboard/src/: App.jsx  index.css
web/dashboard/src/components/: Chatbot.jsx  Dashboard.jsx  DeployHistory.jsx  DeployWizard.jsx  Login.jsx  SecretsVault.jsx
web/dashboard/src/context/: AuthContext.jsx
web/os-desktop/: index.html  package-lock.json  package.json
web/os-desktop/src/: App.jsx  index.css
web/os-desktop/src/components/: AppLauncher.jsx  BootScreen.jsx  BrowserApp.jsx  (+11 more)
