[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axle-os"
version = "0.1.0"
description = "AI-Powered Linux Deployment Engine"
authors = [
    { name = "AXLE Team" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "cryptography",
    "rich",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "google-generativeai",
    "ollama",
]
web = [
    "flask>=3.0",
    "flask-socketio>=5.0",
    "sqlalchemy>=2.0",
]
server = [
    "paramiko>=3.0",
]
all = [
    "axle-os[ai,web,server]",
    "textual",
    "pystray",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "click[testing]",
]

[project.scripts]
axle = "axle.cli:main"

[tool.setuptools.packages.find]
include = ["axle*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["axle"]
omit = ["tests/*"]
